--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -109,7 +109,7 @@
             android:padding="4dp"
             android:layout_marginEnd="30dp"
             android:textSize="11sp"
-            android:visibility="gone"
+            android:visibility="visible"
             />
 
         <Button
