allowed for json parsing. going to switch this over to firestore

--- a/app/src/main/res/layout/auth_activity_login.xml
+++ b/app/src/main/res/layout/auth_activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    tools:context=".login.LoginActivity">
+    tools:context=".auth.AuthActivity">
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView"
