--- a/app/src/main/res/layout/auth_fragment_login.xml
+++ b/app/src/main/res/layout/auth_fragment_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    tools:context=".login.LoginFragment">
+    tools:context=".auth.LoginFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:paddingBottom="10dp"
