--- a/app/src/main/res/navigation/ptp_nav.xml
+++ b/app/src/main/res/navigation/ptp_nav.xml
@@ -7,16 +7,16 @@
 
     <fragment
         android:id="@+id/mainMenuFragment"
-        android:name="com.javierlabs.ezptp.main_menu.MainMenuFragment"
+        android:name="com.javierlabs.ezptp.main.menu.MainMenuFragment"
         android:label="fragment_main_menu"
-        tools:layout="@layout/fragment_main_menu" >
+        tools:layout="@layout/main_fragment_main_menu" >
         <action
             android:id="@+id/action_mainMenuFragment_to_startFragment"
             app:destination="@id/startFragment" />
     </fragment>
     <fragment
         android:id="@+id/startFragment"
-        android:name="com.javierlabs.ezptp.StartFragment"
+        android:name="com.javierlabs.ezptp.main.StartFragment"
         android:label="fragment_start"
         tools:layout="@layout/fragment_start" />
 </navigation>
