--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -9,5 +9,5 @@
         android:id="@+id/equipments_spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        />
+        android:dropDownWidth="wrap_content" />
 </androidx.core.widget.NestedScrollView>
