--- a/app/src/main/res/layout/main_fragment_main_menu.xml
+++ b/app/src/main/res/layout/main_fragment_main_menu.xml
@@ -73,7 +73,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:fontFamily="sans-serif-medium"
         android:text="@string/welcome"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
