--- a/app/src/main/res/layout/main_activity_main.xml
+++ b/app/src/main/res/layout/main_activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".main.MainActivity">
+    tools:context=".main.ptp.MainActivity">
 
 
     <androidx.fragment.app.FragmentContainerView
