--- a/app/src/main/res/layout/ptp_fragment_start.xml
+++ b/app/src/main/res/layout/ptp_fragment_start.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".main.StartFragment">
+    tools:context=".main.ptp.StartFragment">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
