--- a/app/src/main/res/navigation/ptp_nav.xml
+++ b/app/src/main/res/navigation/ptp_nav.xml
@@ -16,7 +16,7 @@
     </fragment>
     <fragment
         android:id="@+id/startFragment"
-        android:name="com.javierlabs.ezptp.main.StartFragment"
+        android:name="com.javierlabs.ezptp.main.ptp.StartFragment"
         android:label="fragment_start"
-        tools:layout="@layout/fragment_start" />
+        tools:layout="@layout/ptp_fragment_start" />
 </navigation>
