radiobuttons can now navigate to a different fragment. however, every time this PTP fragment opens, it fetches from the database. need to find a workaround so that it only needs to fetch once.

--- a/app/src/main/res/navigation/ptp_nav.xml
+++ b/app/src/main/res/navigation/ptp_nav.xml
@@ -18,5 +18,14 @@
         android:id="@+id/startFragment"
         android:name="com.javierlabs.ezptp.main.ptp.StartFragment"
         android:label="fragment_start"
-        tools:layout="@layout/ptp_fragment_start" />
+        tools:layout="@layout/ptp_fragment_start" >
+        <action
+            android:id="@+id/action_startFragment_to_firstAnswerFragment"
+            app:destination="@id/firstAnswerFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/firstAnswerFragment"
+        android:name="com.javierlabs.ezptp.main.ptp.FirstAnswerFragment"
+        android:label="ptp_fragment_first_answer"
+        tools:layout="@layout/ptp_fragment_first_answer" />
 </navigation>
