--- a/app/src/main/res/layout/ptp_fragment_first_answer.xml
+++ b/app/src/main/res/layout/ptp_fragment_first_answer.xml
@@ -27,97 +27,109 @@
             app:layout_constraintTop_toTopOf="parent" />
 
 
-        <CheckBox android:id="@+id/hazardous_energy_source_cb"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/check_boxes_container"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:text="Hazardous Energy Source"
+            android:orientation="vertical"
             app:layout_constraintTop_toBottomOf="@+id/hazards_tv"
-            app:layout_constraintStart_toStartOf="parent"/>
-
-        <CheckBox
-            android:id="@+id/work_from_heights_cb"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:text="Work From Heights"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/hazardous_energy_source_cb" />
+            app:layout_constraintEnd_toEndOf="parent">
 
-        <CheckBox android:id="@+id/hot_work_cb"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:text="Hot Work"
-            app:layout_constraintTop_toBottomOf="@+id/work_from_heights_cb"
-            app:layout_constraintStart_toStartOf="parent"/>
+            <CheckBox android:id="@+id/hazardous_energy_source_cb"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:buttonTint="@color/colorPrimary"
+                android:text="Hazardous Energy Source"
+                />
 
-        <CheckBox android:id="@+id/confined_space_cb"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:text="Confined Space"
-            app:layout_constraintTop_toBottomOf="@+id/hot_work_cb"
-            app:layout_constraintStart_toStartOf="parent"/>
+            <CheckBox
+                android:id="@+id/work_from_heights_cb"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:buttonTint="@color/colorPrimary"
+                android:text="Work From Heights"
+                 />
 
-        <CheckBox android:id="@+id/hoisting_and_rigging_cb"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:text="Hoisting and Rigging"
-            app:layout_constraintTop_toBottomOf="@+id/confined_space_cb"
-            app:layout_constraintStart_toStartOf="parent"/>
+            <CheckBox android:id="@+id/hot_work_cb"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:text="Hot Work"
+                android:buttonTint="@color/colorPrimary"
+                />
 
-        <CheckBox android:id="@+id/yard_cb"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:text="Activity in the yard or near moving vehicles"
-            app:layout_constraintTop_toBottomOf="@+id/hoisting_and_rigging_cb"
-            app:layout_constraintStart_toStartOf="parent"/>
+            <CheckBox android:id="@+id/confined_space_cb"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:text="Confined Space"
+                android:buttonTint="@color/colorPrimary"
+                />
 
-        <CheckBox android:id="@+id/active_ar_floor_cb"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:text="Non-standard task on active robotics floor"
-            app:layout_constraintTop_toBottomOf="@+id/yard_cb"
-            app:layout_constraintStart_toStartOf="parent"/>
+            <CheckBox android:id="@+id/hoisting_and_rigging_cb"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:text="Hoisting and Rigging"
+                android:buttonTint="@color/colorPrimary"
+                />
 
-        <CheckBox
-            android:id="@+id/fire_cb"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:text="Fire/Life-Safety System inspection, testing, or maintenance"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/active_ar_floor_cb" />
+            <CheckBox android:id="@+id/yard_cb"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:text="Activity in the yard or near moving vehicles"
+                android:buttonTint="@color/colorPrimary"
+                />
 
-        <CheckBox android:id="@+id/construction_cb"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:text="Construction, Installation, or Demolition"
-            app:layout_constraintTop_toBottomOf="@+id/fire_cb"
-            app:layout_constraintStart_toStartOf="parent"/>
+            <CheckBox android:id="@+id/active_ar_floor_cb"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:text="Non-standard task on active robotics floor"
+                android:buttonTint="@color/colorPrimary"
+                />
 
-        <CheckBox android:id="@+id/pit_cb"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:text="Activity involving PIT equipment or in PIT areas"
-            app:layout_constraintTop_toBottomOf="@+id/construction_cb"
-            app:layout_constraintStart_toStartOf="parent"/>
+            <CheckBox
+                android:id="@+id/fire_cb"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:text="Fire/Life-Safety System inspection, testing, or maintenance"
+                android:buttonTint="@color/colorPrimary"
+                app:layout_constraintEnd_toEndOf="parent"
+                />
 
-        <CheckBox
-            android:id="@+id/dock_door_cb"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:text="Dock door or leveler"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/pit_cb" />
+            <CheckBox android:id="@+id/construction_cb"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:text="Construction, Installation, or Demolition"
+                android:buttonTint="@color/colorPrimary"
+                />
+
+            <CheckBox android:id="@+id/pit_cb"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:text="Activity involving PIT equipment or in PIT areas"
+                android:buttonTint="@color/colorPrimary"
+                />
+
+            <CheckBox
+                android:id="@+id/dock_door_cb"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:text="Dock door or leveler"
+                android:buttonTint="@color/colorPrimary"
+                />
+
+        </LinearLayout>
+
 
         <Button
             android:id="@+id/next_button"
@@ -127,11 +139,11 @@
             android:layout_marginBottom="16dp"
             android:text="@string/next"
             android:textColor="@color/colorWhite"
-            android:visibility="invisible"
+            android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/dock_door_cb" />
+            app:layout_constraintTop_toBottomOf="@+id/check_boxes_container" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
