--- a/app/src/main/res/layout/auth_fragment_login.xml
+++ b/app/src/main/res/layout/auth_fragment_login.xml
@@ -112,7 +112,7 @@
             android:visibility="visible"
             />
 
-        <Button
+        <androidx.compose.ui.platform.ComposeView
             android:id="@+id/loginBtn"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
